Fixed alignment issues

--- a/css/main.css
+++ b/css/main.css
@@ -50,12 +50,17 @@ header {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	flex-flow: row wrap;
+	flex-flow: row wrap; 
+	width: 100%;
 }
 
 header h1 {
 	margin: 0;
 	padding: 38px 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
 }
 header h1 span {
 	color: #77a466;
@@ -63,6 +68,10 @@ header h1 span {
 
 header nav {
 	padding: 46px 0;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 header nav ul {
 	margin: 0;
@@ -86,9 +95,9 @@ header nav ul li a{
 .bottom-section {
 	margin: 0 auto;
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	justify-content: left;
 	flex-flow: row wrap;
+	width: 100%;
 }
 
 .main-image {
@@ -117,21 +126,18 @@ header nav ul li a{
 .section-two,
 .section-three {
 	width: 30%;
-	border-top: 1px solid #eee;
 }
 
 .section-one h3 {
 	padding: 10px 0;
 }
 
-.section-two {
-	border-left: 1px solid #eee;
-	border-right: 1px solid #eee;
-}
+
+
 
 .section-two h3,
 .section-three h3 {
-	padding: 10px 30px;
+	padding: 0px 30px;
 }
 
 .menu {
